[package]
name = "strainberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.3.1"
clap = { version = "4.3.5", features = ["derive"] }
flate2 = "1.0.26"
itertools = "0.10.5"
libc = "0.2.146"
needletail = "0.5.1"
petgraph = "0.6.3"
rust-htslib = "0.44.1"
rust-lapper = "1.1.0"
rustc-hash = "1.1.0"
tinyvec = "1.6.0"

[profile.release]
lto = true
