[package]
name = "strainberry"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "2.2.0"
clap = { version = "4.5.31", features = ["derive"] }
flate2 = "1.1.0"
itertools = "0.14.0"
libc = "0.2.170"
needletail = "0.6.3"
# petgraph = "0.7.1"
rust-htslib = { version = "0.49.0", default-features = false }
rust-lapper = "1.1.0"
rustc-hash = "2.1.1"
tinyvec = { version = "1.9.0", features = ["alloc"] }

[profile.release]
lto = true
