[package]
name = "strainberry"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abpoa-rs = "0.2.0"
ahash = "0.8.11"
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
# fishers_exact = "1.0.1"
flate2 = "1.1.0"
itertools = "0.14.0"
libc = "0.2.170"
needletail = "0.6.3"
rust-htslib = { version = "0.49.0", default-features = false }
# spoa = "0.1.1"
tinyvec = { version = "1.9.0", features = ["alloc"] }
which = "7.0.2"

[profile.release]
lto = true
