[package]
name = "edlib_rs"
version = "0.1.2"
authors = ["jeanpierre.both@gmail.com"]
edition = "2018"
build = "build.rs"
license = "MIT/Apache-2.0"
keywords = ["ffi", "bindings", "edlib"]
repository = "https://github.com/jean-pierreBoth/edlib-rs"
documentation = "https://docs.rs/edlib_rs"
description = "A rust interface to the C++ edlib library"

[lib]
lib = "edlib_rs"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1"

[[examples]]
name = "edaligner"
path = "examples/edaligner.rs"
